<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="5dp" >

      <EditText
            android:id="@+id/etCurrentMasterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/current_master_password"
            android:visibility="gone"
            android:layout_margin="2dp"
            android:padding="@dimen/base_padding" />
      
      <EditText
          android:id="@+id/etNewMasterPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="2dp"
          android:hint="@string/new_master_password"
          android:inputType="textPassword"
          android:padding="@dimen/base_padding" />
      
      <EditText
          android:id="@+id/etConfirmNewMasterPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="2dp"
          android:hint="@string/confirmed_master_password"
          android:inputType="textPassword"
          android:padding="@dimen/base_padding" />

      <TextView
          android:id="@+id/textView1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/base_padding"
          android:text="@string/about_master_password"
          android:textSize="14sp" />

      <Button
          android:id="@+id/btnSetMasterPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/btn_set_master_password" />

    </LinearLayout>

</RelativeLayout>